# extract

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  pyproject.toml
app/: app.py  config.py
app/blueprints/: utils.py
app/blueprints/download/: download.py  routes.py
app/blueprints/langchain/: routes.py
app/blueprints/manual_extraction/: routes.py
app/blueprints/review/: routes.py
app/blueprints/upload/: helper.py  routes.py
app/blueprints/viewer/: routes.py
app/static/css/: main.css
app/templates/: activate_langchain.html  base.html  download_dataset.html  index.html  manual_extraction.html  review.html  upload_csv.html  upload_pdf.html
consultation_emails/: __init__.py
consultation_emails/database/: fetch_data.py
consultation_emails/evaluate/: manual_evaluation.py
consultation_emails/extract/: input_csv_validation.py  question_extraction_api.py  text_handler.py
consultation_emails/logger/: logger.py
consultation_emails/schemas/: dynamo_db.py  input_data.py  model_responses.py
infrastructure/: dynamodb.tf  provider.tf  s3.tf  secrets.tf  ssm.tf  variables.tf
prompt_templates/approved/: prompt_template_human.jinja  prompt_template_system.jinja
